k8s/01-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arkashri
