k8s/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arkashri-ingress
  namespace: arkashri
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:YOUR_ACCOUNT_ID:certificate/YOUR_CERTIFICATE_ID
    # Cloudflare IP rules or WAF associations can go here
spec:
  rules:
    - host: api.arkashri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arkashri-api-service
                port:
                  number: 80
